--- a/bitesight/src/components/Footer.css
+++ b/bitesight/src/components/Footer.css
@@ -3,7 +3,7 @@ a {
 }
 .item1 {
     border: none;
-    background-color: inherit;
+    background-color: #111111;
     color: #6bd1f0;
     padding-left: 10px;
     font-size: 20px;
@@ -19,7 +19,7 @@ a {
     outline: 0;
 }
 .item2 {
-    background: rgba(49, 49, 54, 0.993);
+    background: #111111;
     color: rgb(190, 190, 190);
     margin: 1px;
     font-size: 15px;
@@ -30,7 +30,7 @@ a {
 
 .item3 {
     font-size: 20px;
-    background: #292a30;
+    background: #f9c307;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -41,7 +41,7 @@ a {
 }
 .item4 {
     font-size: 20px;
-    background: #25252b;
+    background: #FACF39;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -52,7 +52,7 @@ a {
 }
 .item5 {
     font-size: 20px;
-    background: #202025;
+    background: #f9c307;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -66,7 +66,7 @@ a {
     color: aliceblue;
     text-align: center;
     margin-top: auto;
-    background-color: rgba(49, 49, 54, 0.993);
+    background-color: #111111;
     font-size: 15px;
     width: 100%;
     height: 4rem;
