--- a/bitesight/src/components/Header.css
+++ b/bitesight/src/components/Header.css
@@ -10,7 +10,7 @@
     grid-template-areas: "logo nav";
   
     /* Cosmetics */
-    background-color: #282c34;
+    background-color: #111111;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   }
   
