--- a/bitesight/src/components/Header.css
+++ b/bitesight/src/components/Header.css
@@ -43,8 +43,8 @@
     font-size: 20px;
     color: #fff;
     font-weight: 600;
-    background-color: rgba(255, 0, 0, 0.5);
-    box-shadow: 0px 5px 0px 0px rgba(255, 0, 0, 0.25);
+    background-color: #FACF39;
+    box-shadow: 0px 5px 0px 0px #f9c307;
     border-radius: 10px;
     cursor: pointer;
     transition: 70ms;
