--- a/src/pages/404.css
+++ b/src/pages/404.css
@@ -4,8 +4,7 @@
   align-items: center;
   justify-content: center;
   height: 100vh;
-  background-color: #f7f7f7;
-}
+  background-color: #ffc107;}
 
 .not-found-header {
   font-size: 6rem;
