--- a/src/pages/CheckboxList.css
+++ b/src/pages/CheckboxList.css
@@ -1,51 +1,73 @@
 .checkbox-list-container {
-    background-color: #ffc107;
-    padding: 20px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  
-  .checkbox-list-item {
-    display: flex;
-    align-items: center;
-    margin: 10px 0;
-    padding: 10px;
-    border-radius: 10px;
-    background-color: #fff;
-    width: 400px;
-  }
-  
-  .checkbox-list-item label {
-    margin-left: 10px;
-    font-family: Arial, sans-serif;
-    font-size: 16px;
-  }
-  
-  .done-button {
-    margin-top: 20px;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 5px;
-    background-color: #000000;
-    color: #fff;
-    font-size: 16px;
-    font-weight: bold;
-    cursor: pointer;
-  }
-  
-  .done-button:hover {
-    background-color: rgba(40, 44, 47, 0.95);
-  }
-  
-  input[type="checkbox"] {
-    width: 25px;
-    height: 25px;
-    border-radius: 5px;
-  }
-  
-  input[type="checkbox"]:checked {
-    border-color: #000000;
-    background-color: #000000;
-  }
-  
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #ffc107;
+}
+
+.checkbox-list {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 20px;
+  width: 100%;
+  max-width: 800px;  /* adjust as needed */
+}
+
+.checkbox-list-item {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 10px;
+  border-radius: 10px;
+  background-color: #000;
+  box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
+  transition: transform 0.3s ease;
+}
+
+.checkbox-list-item:hover {
+  transform: scale(1.03);
+}
+
+.checkbox-list-item label {
+  margin-left: 10px;
+  font-family: Arial, sans-serif;
+  font-size: 16px;
+  color: #fff;
+  flex-grow: 1;
+  text-align: center;
+}
+
+.done-button {
+  margin-top: 20px;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  background-color: #000000;
+  color: #fff;
+  font-size: 16px;
+  font-weight: bold;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.done-button:hover {
+  background-color: rgba(40, 44, 47, 0.95);
+}
+
+input[type="checkbox"] {
+  width: 25px;
+  height: 25px;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+input[type="checkbox"]:hover {
+  background-color: #ffc107;
+}
+
+input[type="checkbox"]:checked {
+  border-color: #000000;
+  background-color: #000000;
+}
