--- a/src/pages/Flip.css
+++ b/src/pages/Flip.css
@@ -33,13 +33,13 @@
   
   /* Style the front side (fallback if image is missing) */
   .flip-card-front {
-    background-color: #bbb;
+    background-color: #2a2a2a;
     color: black;
   }
   
   /* Style the back side */
   .flip-card-back {
-    background-color: #2a2a2a;
+    background-color: #ffc107;
     color: white;
     transform: rotateY(180deg);
   }
@@ -141,8 +141,9 @@
 }
 
 .CardImg{
-  width: 100%;
-  height: 100%;
+  width: 85%;
+  height: 85%;
   object-fit: cover;
   vertical-align: middle;
+  padding-top: 5%;
 }
