--- a/src/pages/Recommendations.css
+++ b/src/pages/Recommendations.css
@@ -1,7 +1,25 @@
-.App-body {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    min-height: 100vh;
-    flex-direction: column;
+.grid-container-card-back {
+  display: grid;
+  align-items: center;
+  grid-template-columns: 1fr 4fr; /* First column 1/3, second column 2/3 */
+}
+
+.grid-item-card-back {
+  text-align: left;
+}
+
+.picture-card-back {
+  grid-row: span 2; /* Picture spans two rows */
+  text-align: center;
+}
+
+.row-span-all {
+  grid-column: 1 / -1; /* Row spans from the first to the last column */
+  text-align: center;
+  padding-bottom: 5px;
+}
+
+.border-line{
+  border-bottom: 1px solid #2a2a2a;
+  margin: 0 auto;
 }
