--- a/src/pages/Recommendations.css
+++ b/src/pages/Recommendations.css
@@ -9,6 +9,10 @@
 }
 
 .picture-card-back {
+  text-align: center;
+}
+
+.picture-double-card-back {
   grid-row: span 2; /* Picture spans two rows */
   text-align: center;
 }
@@ -22,4 +26,12 @@
 .border-line{
   border-bottom: 1px solid #2a2a2a;
   margin: 0 auto;
+}
+
+.websiteLink{
+  text-decoration: none;
+}
+
+.websiteLink:hover{
+  text-decoration: underline;
 }
