--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -65,7 +65,8 @@ a {
 .footer-container {
     color: aliceblue;
     text-align: center;
-    margin-top: auto;
+    position: fixed;
+    bottom: 0;
     background-color: #111111;
     font-size: 15px;
     width: 100%;
